--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "line-webhook-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js"
   "scripts": {
     "start": "node index.js"
   },
