--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "line-webhook-server",
   "version": "1.0.0",
-  "main": "src/index.js"
+  "main": "src/index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node src/index.js"
   },
   "dependencies": {
     "axios": "^1.6.0",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2"
   }
 }
